fix legacy pages on mobile(content container) (#636)

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -6111,8 +6111,11 @@ pre.prettyprint {
     padding: 0;
     margin: 0 0 1em 0; }
 
-div.help {
-  min-width: 992px; }
+@media (min-width: 992px) {
+  div.help {
+    min-width: 992px;
+  }
+}
 
 pre.programtext {
   max-width: 660px; }
